# runcloud-desktop-app

./: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js
src/: App.vue  api.js  main.js  store.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: build.rs
src/assets/: tailwind.css
src/components/: ConnectAccount.vue  Firewall.vue  Servers.vue  Services.vue
src/db/: file.js  storage.js
src/resources/: base.js  server.js
src/singles/: Logo.vue  Sidebar.vue
src/stores/: config.js
