[package]
name = "Runcloud"
version = "0.1.0"
description = "A desktop app for the Runcloud platform"
authors = [ "Gerard Lamusse" ]
license = "MIT"
repository = ""
default-run = "runcloudapp"
edition = "2018"
build = "src/build.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "0.9", features = [ "all-api" ] }

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "runcloudapp"
path = "src/main.rs"
